--- a/client/css/globals/profiles.styl
+++ b/client/css/globals/profiles.styl
@@ -131,31 +131,32 @@ p a.survey
 		text-align right
 		clear both
 
-.feedback
-	cursor pointer
-	.clickForFeedback
-		color white
-		width 18%
-		text-align center
-		padding 5px
-		text-align center
-		font-family $buttonFont
-		font-size 1.4em
-		background $csPurple
-		margin 0
-	.row
-		margin 10px 20px 0 0
-		display none
-		background $csPurple
-		color white
-		padding 10px 10px 0 10px
-	.hideth
-		display block
-.allProfiles
-	h1
-		color $csGreen
-		margin-bottom 20px
-	p
-		font-size 1.3em
-		color $gray
-		margin 20px 0
+.profiles
+	.feedback
+		cursor pointer
+		.clickForFeedback
+			color white
+			width 18%
+			text-align center
+			padding 5px
+			text-align center
+			font-family $buttonFont
+			font-size 1.4em
+			background $csPurple
+			margin 0
+		.row
+			margin 10px 20px 0 0
+			display none
+			background $csPurple
+			color white
+			padding 10px 10px 0 10px
+		.hideth
+			display block
+	.allProfiles
+		h1
+			color $csGreen
+			margin-bottom 20px
+		p
+			font-size 1.3em
+			color $gray
+			margin 20px 0
